--- a/GitHubIssues/View/LoginControl.xaml
+++ b/GitHubIssues/View/LoginControl.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" x:Class="Alteridem.GitHub.View.LoginControl" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             x:Class="Alteridem.GitHub.View.LoginControl" 
              mc:Ignorable="d" 
              d:DesignHeight="120" d:DesignWidth="300">
     <Grid>
@@ -12,8 +12,13 @@
             <RowDefinition Height="36"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="Username" Grid.Column="0" Grid.Row="0" ToolTip="GitHub username or email address" Height="24" Margin="6"/>
-        <PasswordBox x:Name="Password" Grid.Column="0" Grid.Row="1" ToolTip="Password" Height="24"  Margin="6" />
-        <Button x:Name="Login" Grid.Column="0" Grid.Row="3" Content="Login" IsDefault="True" ToolTip="Login to GitHub" Height="24" Width="50" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="6" Click="OnLogon"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="62"/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="UserText" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" ToolTip="GitHub username or email address" Height="24" Margin="6"/>
+        <PasswordBox x:Name="PassText" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" ToolTip="Password" Height="24"  Margin="6" />
+        <TextBlock x:Name="Message" Grid.Column="0" Grid.Row="2" Margin="6" Height="24" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFD0000" />
+        <Button x:Name="Login" Grid.Column="1" Grid.Row="3" Content="Login" IsDefault="True" ToolTip="Login to GitHub" Height="24" Width="50" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="6" Click="OnLogon"/>
     </Grid>
 </UserControl>
