--- a/GitHubIssues/View/MainWindow.xaml
+++ b/GitHubIssues/View/MainWindow.xaml
@@ -1,9 +1,14 @@
 ﻿<Window x:Class="Alteridem.GitHub.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:view1="clr-namespace:Alteridem.GitHub.View"
+        xmlns:view="clr-namespace:Alteridem.GitHub.View"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <view1:LoginControl />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <view:GiHubUserControl Grid.Row="0" />
+        <view:LoginControl Grid.Row="1" />
     </Grid>
 </Window>
