--- a/GitHubIssues/View/GitHubUserControl.xaml
+++ b/GitHubIssues/View/GitHubUserControl.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Name="userControl" x:Class="Alteridem.GitHub.View.GiHubUserControl"
+﻿<UserControl x:Name="GitHubUser" x:Class="Alteridem.GitHub.View.GitHubUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             DataContext="{Binding ElementName=userControl, Path=GitHubApi.User}"
+             DataContext="{Binding ElementName=GitHubUser, Path=GitHubApi.User}"
              d:DesignHeight="48" d:DesignWidth="200">
     <Grid>
         <Grid.RowDefinitions>
