--- a/GitHubIssues/View/LoginDialog.xaml
+++ b/GitHubIssues/View/LoginDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Alteridem.GitHub.View.LoginDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login to GitHub" Height="246" Width="300" ResizeMode="NoResize" Foreground="#FF333333" WindowStyle="ToolWindow">
+        Title="Login to GitHub" Height="206" Width="300" Foreground="#FF333333" WindowStyle="None" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Grid Margin="0,0,0,-5">
         <Grid.RowDefinitions>
             <RowDefinition Height="62" />
@@ -16,7 +16,8 @@
             <ColumnDefinition Width="62"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Margin="12,0,12,6" Style="{StaticResource FontAwesome}" FontSize="36" Text="&#xf09b;" Height="43" />
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource FontAwesome}" FontSize="36" Text="&#xf09b;" />
+        <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" VerticalAlignment="Center" FontSize="24" Text="Login to GitHub" />
 
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Username:" VerticalAlignment="Center" Margin="6,10" Height="16" />
         <TextBox x:Name="UserText" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" ToolTip="GitHub username or email address" Margin="6"/>
@@ -27,8 +28,12 @@
         <TextBlock x:Name="Message" Grid.Column="0" Grid.Row="3" Margin="6,6,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFD0000" Width="0" />
 
         <DockPanel Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Right">
-            <Button x:Name="Login" Content="Login" IsDefault="True" ToolTip="Login to GitHub" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,6,3,6" Click="OnLogon"/>
-            <Button x:Name="Cancel" Content="Cancel" IsDefault="True" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,6,6,6" Click="OnCancel"/>
+            <Button x:Name="Login" Content="Login" Command="Close" IsDefault="True" ToolTip="Login to GitHub" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,6,3,6">
+                <Button.CommandBindings>
+                    <CommandBinding Command="Close" Executed="Logon_OnExecuted" CanExecute="Logon_OnCanExecute" />
+                </Button.CommandBindings>
+            </Button>
+            <Button x:Name="Cancel" Content="Cancel" IsCancel="True" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,6,6,6" />
         </DockPanel>
     </Grid>
 </Window>
