--- a/GitHubIssues/View/IssueListControl.xaml
+++ b/GitHubIssues/View/IssueListControl.xaml
@@ -32,6 +32,18 @@
                 <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
             </StackPanel>
         </DataTemplate>
+        <DataTemplate x:Key="MilestoneTemplate">
+            <Grid HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
+                <Border Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Background="#FFEEEEEE" BorderBrush="#FFE3E3E3" CornerRadius="2" BorderThickness="1" >
+                    <TextBlock Text="{Binding Path=OpenIssues}" Margin="2" FontSize="10" />
+                </Border>
+            </Grid>
+        </DataTemplate>
         <ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="IssueFilterDataProvider">
             <ObjectDataProvider.MethodParameters>
                 <x:Type TypeName="octokit:IssueFilter" />
@@ -67,9 +79,10 @@
                       ItemTemplate="{StaticResource LabelTemplate}" />
             <ComboBox x:Name="Milestone" Margin="3,6"
                       Width="120" Height="26"
+                      HorizontalContentAlignment="Stretch"
                       ItemsSource="{Binding Path=Milestones}"
                       SelectedItem="{Binding Path=Milestone}"
-                      DisplayMemberPath="Title" />
+                      ItemTemplate="{StaticResource MilestoneTemplate}" />
         </StackPanel>
         <view:GitHubUserControl Grid.Row="0" Grid.Column="1" Width="Auto" HorizontalAlignment="Right"/>
         <DataGrid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
