--- a/GitHubExtension/View/IssueListControl.xaml
+++ b/GitHubExtension/View/IssueListControl.xaml
@@ -6,7 +6,7 @@
              xmlns:view="clr-namespace:Alteridem.GitHub.View"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:octokit="clr-namespace:Octokit;assembly=Octokit"
-             xmlns:converters="clr-namespace:Alteridem.GitHub.Converters"
+             xmlns:converters="clr-namespace:Alteridem.GitHub.Converters;assembly=Alteridem.GitHub"
              DataContext="{Binding ElementName=IssueList, Path=GitHubApi}"
              mc:Ignorable="d" 
              Foreground="#FF333333"
