--- a/GitHubExtension/View/LoginDialog.xaml
+++ b/GitHubExtension/View/LoginDialog.xaml
@@ -9,6 +9,13 @@
         ResizeMode="NoResize"
         Background="Transparent"
         AllowsTransparency="True">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Border Background="White" CornerRadius="12">
         <Grid Margin="0,0,0,-5">
             <Grid.RowDefinitions>
