--- a/GitHubExtension/View/GitHubUserControl.xaml
+++ b/GitHubExtension/View/GitHubUserControl.xaml
@@ -2,14 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:wpf="clr-namespace:Alteridem.GitHub.Extension.View"
              mc:Ignorable="d" 
              DataContext="{Binding ElementName=GitHubUser, Path=GitHubApi}"
              d:DesignHeight="32" d:DesignWidth="200">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles.xaml" />
+                <ResourceDictionary Source="Theme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -20,7 +21,15 @@
             </Rectangle.Fill>
         </Rectangle>
         <TextBlock x:Name="Login" VerticalAlignment="Center" HorizontalAlignment="Left" Height="20" Margin="3,6,3,6" FontSize="14" Text="{Binding User.Login}" />
-        <Button x:Name="LoginOut" VerticalAlignment="Center" HorizontalAlignment="Right" Height="20" Margin="3,6,6,6" FontSize="18" FocusVisualStyle="{x:Null}" Click="OnLogin">
+        <Button x:Name="LoginOut" 
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Right"
+                Height="20" 
+                Margin="3,6,6,6"
+                FontSize="18" 
+                FocusVisualStyle="{x:Null}"
+                Foreground="{DynamicResource {x:Static wpf:Theme.ForegroundKey}}"
+                Click="OnLogin">
             <Button.Template>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <ContentPresenter />
