--- a/GitHubExtension/View/IssueListControl.xaml
+++ b/GitHubExtension/View/IssueListControl.xaml
@@ -110,6 +110,7 @@
                   ItemsSource="{Binding Path=Issues}"
                   FontSize="12"
                   IsReadOnly="True"
+                  RowHeaderWidth="0"
                   Background="{DynamicResource {x:Static wpf:Theme.BackgroundKey}}"
                   Foreground="{DynamicResource {x:Static wpf:Theme.ForegroundKey}}"
                   RowBackground="{DynamicResource {x:Static wpf:Theme.BackgroundKey}}"
@@ -136,7 +137,13 @@
                 </Style>
             </DataGrid.RowHeaderStyle>
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding Path=Number}" Header="#" CanUserResize="False"/>
+                <DataGridTextColumn Binding="{Binding Path=Number}" Header=" #" CanUserResize="False">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Margin" Value="5,0,0,0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Path=Title}" Header="Title" Width="400" />
                 <DataGridTextColumn Binding="{Binding Path=State}" Header="State" CanUserResize="False" />
                 <DataGridTextColumn Binding="{Binding Path=User.Login}" Header="Reported By" Width="120"/>
