Fix #1 - Logon dialog now stays up until success or cancel

--- a/GitHubExtension/View/LoginDialog.xaml
+++ b/GitHubExtension/View/LoginDialog.xaml
@@ -38,14 +38,10 @@
             <TextBlock Grid.Column="0" Grid.Row="2" Text="Password:" VerticalAlignment="Center" Margin="6,10" Height="16" />
             <PasswordBox x:Name="PassText" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" ToolTip="Password"  Margin="6" />
 
-            <TextBlock x:Name="Message" Grid.Column="0" Grid.Row="3" Margin="6,6,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFD0000" Width="0" />
+            <TextBlock x:Name="Message" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Margin="6,6,0,0" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
             <DockPanel Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Right">
-                <Button x:Name="Login" Content="Login" Command="Close" IsDefault="True" ToolTip="Login to GitHub" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,6,3,6">
-                    <Button.CommandBindings>
-                        <CommandBinding Command="Close" Executed="Logon_OnExecuted" CanExecute="Logon_OnCanExecute" />
-                    </Button.CommandBindings>
-                </Button>
+                <Button x:Name="Login" Content="Login" Command="{Binding Path=LogonCommand}" IsDefault="True" ToolTip="Login to GitHub" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,6,3,6" />
                 <Button x:Name="Cancel" Content="Cancel" IsCancel="True" Padding="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,6,6,6" />
             </DockPanel>
         </Grid>
