--- a/GitHubExtension/View/GitHubUserControl.xaml
+++ b/GitHubExtension/View/GitHubUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Name="GitHubUser" x:Class="Alteridem.GitHub.View.GitHubUserControl"
+﻿<UserControl x:Name="GitHubUser" x:Class="Alteridem.GitHub.Extension.View.GitHubUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
