--- a/GitHubExtension/View/IssueListControl.xaml
+++ b/GitHubExtension/View/IssueListControl.xaml
@@ -1,17 +1,16 @@
-﻿<UserControl x:Name="IssueList" x:Class="Alteridem.GitHub.View.IssueListControl"
+﻿<UserControl x:Name="IssueList" x:Class="Alteridem.GitHub.Extension.View.IssueListControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:view="clr-namespace:Alteridem.GitHub.View"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:octokit="clr-namespace:Octokit;assembly=Octokit"
              xmlns:converters="clr-namespace:Alteridem.GitHub.Converters;assembly=Alteridem.GitHub"
              xmlns:wpf="clr-namespace:Alteridem.GitHub.Extension.View"
              DataContext="{Binding ElementName=IssueList, Path=GitHubApi}"
              mc:Ignorable="d" 
-             Background="{DynamicResource {x:Static wpf:Theme.BackgroundKey}}"
-             Foreground="{DynamicResource {x:Static wpf:Theme.ForegroundKey}}"
+             Background="{x:Static wpf:Theme.BackgroundAccentKey}"
+             Foreground="{x:Static wpf:Theme.ForegroundKey}"
              d:DesignHeight="500" 
              d:DesignWidth="800">
     <UserControl.Resources>
@@ -103,7 +102,7 @@
                       SelectedItem="{Binding Path=Milestone}"
                       ItemTemplate="{StaticResource MilestoneTemplate}" />
         </StackPanel>
-        <view:GitHubUserControl Grid.Row="0" Grid.Column="1" Width="Auto" HorizontalAlignment="Right"/>
+        <wpf:GitHubUserControl Grid.Row="0" Grid.Column="1" Width="Auto" HorizontalAlignment="Right"/>
         <DataGrid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
                   Margin="6,0,6,6"
                   AutoGenerateColumns="False" 
