--- a/GitHubExtension/View/LoginDialog.xaml
+++ b/GitHubExtension/View/LoginDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Alteridem.GitHub.View.LoginDialog"
+﻿<Window x:Class="Alteridem.GitHub.Extension.View.LoginDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Login to GitHub" 
